# md2conf2md

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: gen.rs
python/md2conf2md/: __init__.py  __init__.pyi
src/: lib.rs  py.rs
src/adf/: mod.rs  model.rs  schema.rs
src/adf_to_md/: blocks.rs  extensions.rs  inlines.rs  mod.rs
src/md_to_adf/: blocks.rs  extensions.rs  inlines.rs  mod.rs
tests/: advanced.rs  nodes.rs  roundtrip.rs  test_python.py
tests/fixtures/: blockquote.adf.json  blockquote.md  bodied_extension.adf.json  bodied_extension.md  bullet_list.adf.json  bullet_list.md  card.adf.json  card.md  code_block.adf.json  code_block.md  date.adf.json  date.md  decision_list.adf.json  decision_list.md  emoji.adf.json  emoji.md  expand.adf.json  expand.md  extension.adf.json  extension.md  extra_marks.adf.json  extra_marks.md  hard_break.adf.json  hard_break.md  heading.adf.json  image.adf.json  image.md  inline_marks.adf.json  inline_marks.md  layout.adf.json  layout.md  link.adf.json  link.md  media_group.adf.json  media_group.md  media_inline.adf.json  media_inline.md  mention.adf.json  mention.md  multipara_list.adf.json  (+19 more)
