[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "md2conf2md"
version = "0.1.0"
description = "Bidirectional Markdown ↔ Confluence ADF converter"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "maturin>=1.0"]

[tool.maturin]
features = ["python"]
module-name = "md2conf2md._md2conf2md"
python-source = "python"
